working chess clock(i guess)

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 </head>
 <body>
     <div class="root" id="root">
-       <div class="timer">
-        <div class="minute" id="minute">3</div>:
-        <div class="second" id="second">00</div>
-       </div>
-        <button id="button">start</button>
+       <button id="button2">
+         <p id="minute1">3</p>:<p id="second1">00</p>
+       </button>
+       <nav>
+         
+       </nav>
+       <button id="button1">
+        <p id="minute0">3</p>:<p id="second0">00</p>
+       </button>
     </div>
     <script src="main.js"></script>
 </body>
