--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <script src="https://kit.fontawesome.com/55a4ab9ea3.js" crossorigin="anonymous"></script>
+    <title>Chess clock</title>
 </head>
 <body>
     <div class="root" id="root">
@@ -12,7 +13,16 @@
          <p id="minute1">3</p>:<p id="second1">00</p>
        </button>
        <nav>
-         
+        <i class="fa-solid fa-pause" id="pause"></i>
+        <select id="timeControle">
+          <option value="30">3 + 0</option>
+          <option value="32">3 + 2</option>
+          <option value="50">5 + 0</option>
+          <option value="53">5 + 3</option>
+          <option value="100">10 + 0</option>
+          <option value="105">10 + 5</option>
+        </select>
+      <i class="fa-solid fa-arrows-rotate" id="reset"></i>
        </nav>
        <button id="button1">
         <p id="minute0">3</p>:<p id="second0">00</p>
